--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-urlrewrite": "^1.4.0",
+    "express-urlrewrite": "2.0.1",
     "json-parse-helpfulerror": "^1.0.3",
     "lodash": "^4.17.21",
     "lodash-id": "^0.14.1",
     "lowdb": "6.0.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.23",
+    "nanoid": "4.0.2",
     "please-upgrade-node": "^3.2.0",
     "pluralize": "^8.0.0",
     "server-destroy": "^1.0.1",
