--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
-    "connect-pause": "^0.1.1",
+    "connect-pause": "0.1.0",
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
+    "express": "4.18.2",
     "express-urlrewrite": "2.0.1",
     "json-parse-helpfulerror": "^1.0.3",
     "lodash": "^4.17.21",
