--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "chalk": "^4.1.2",
+    "chalk": "5.2.0",
     "compression": "^1.7.4",
     "connect-pause": "0.1.0",
     "cors": "^2.8.5",
