--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepublish": "npm test && npm run build"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "1.20.2",
     "chalk": "5.2.0",
     "compression": "^1.7.4",
     "connect-pause": "^0.1.1",
