--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-urlrewrite": "^1.4.0",
+    "express-urlrewrite": "2.0.1",
     "json-parse-helpfulerror": "^1.0.3",
     "lodash": "^4.17.21",
     "lodash-id": "^0.14.1",
