--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -17,30 +17,31 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Store Workflow Run ID
-        run: echo "WORKFLOW_RUN_ID=$GITHUB_RUN_ID" >> $GITHUB_ENV\
-        
+        run: echo "WORKFLOW_RUN_ID=$GITHUB_RUN_ID" >> $GITHUB_ENV
+
+
+      - name: Install jq
+        run: sudo apt-get install -y jq
 
       - name: Run read_comment.sh
         run: |
           chmod +x ./read_comment.sh
           ./read_comment.sh
         shell: bash
-        
-        
       - name: Run update package.json
         run: |
           chmod +x ./update_packages.sh
           ./update_packages.sh
         shell: bash
         
-        
+      - name: Create src directory
+        run: mkdir src
+
       - name: Run dependency_updates.sh
         run: |
           chmod +x ./dependency_updates.sh
           ./dependency_updates.sh
         shell: bash
-        
-        
       - name: Get Latest Commit SHA
         id: get-sha
         run: echo "::set-output name=commit-sha::${{ github.sha }}"
