--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lowdb": "6.0.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.23",
+    "nanoid": "4.0.2",
     "please-upgrade-node": "^3.2.0",
     "pluralize": "^8.0.0",
     "server-destroy": "^1.0.1",
