revert to c9edd8545978ceac44e69d06a5717ea17bb4cba81

--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "prepublish": "npm test && npm run build"
   },
   "dependencies": {
-    "body-parser": "1.20.2",
+    "body-parser": "^1.19.0",
     "chalk": "5.2.0",
     "compression": "^1.7.4",
     "connect-pause": "^0.1.1",
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
-    "express": "4.18.2",
-    "express-urlrewrite": "2.0.1",
+    "express": "^4.17.1",
+    "express-urlrewrite": "^1.4.0",
     "json-parse-helpfulerror": "^1.0.3",
     "lodash": "^4.17.21",
     "lodash-id": "^0.14.1",
     "lowdb": "6.0.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "nanoid": "4.0.2",
+    "nanoid": "^3.1.23",
     "please-upgrade-node": "^3.2.0",
     "pluralize": "^8.0.0",
     "server-destroy": "^1.0.1",
