--- a/.github/workflows/issue_reminder.yml
+++ b/.github/workflows/issue_reminder.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Run Read_commit file      
       run: |
         chmod +x reminder_comment.sh
-        ./open_issues_Alert1.sh
+        ./reminder_comment.sh
       shell: bash
